# Multi-AI-Agent

./: .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  script.sh  setup.py  wiki.md
app/: __init__.py  main.py
app/api/: api.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/: ui.py
custom_jenkins/: Dockerfile  docker-compose.yaml
